--- a/index.html
+++ b/index.html
@@ -5,7 +5,43 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+	<head>header#main img{
+    max-width: 100%;
+    max-height: auto;
+    opacity: 2;
+    margin: 0 auto;
+}
+
+header#main hgroup h1{
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    opacity: .5;
+    margin-top: 0;
+    color: #E7E7E7;
+    font-size: 3.5em;
+    font-family: 'Open Sans';
+    font-weight: lighter;
+    max-width: 100%;
+    margin: auto;
+}
+
+header#main hgroup h2{
+    font-family: 'Open Sans';
+    opacity: .9;
+    font-style: italic;
+    color: #E7E7E7;
+    font-size: 1em;
+    font-family: 'Open Sans';
+    font-weight: lighter;
+    text-align: justify;
+    position: absolute;
+    top: 60%;
+    left: 42%;
+    max-width: 100%;
+    margin: auto;
+}
+		
 		<title>Massively by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
