--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html> 
+	<header id="main">
+    <img src="imgs/mountain.jpg"/>
+    <hgroup>
+        <h1>Title</h1>
+        <h2> subtitle </h2>
+    </hgroup>
+</header>    
 	<head>
 		<title>Massively by HTML5 UP</title>
 		<meta charset="utf-8" />
